# CrayonBall

./: .gitignore  AS_gl.c  AS_image.c  AS_init.c  AS_main.c  README.md  al.c  alc.c  build-ruby-1.8.sh  com.howlingmoonsoftware.CrayonBall.metainfo.xml  documentation.rb  glu.c  icon.xcf  main.c  meson.build  mingw32.mk  oggstreamer.c  rboal.c  rboal.h  rbogl.h
Aerosol/ext/Chipmunk/src/: Makefile
Aerosol/ext/Photon/ruby/: doc_dummy.rb  photon.rb  photon_var.rb
Aerosol/ext/Photon/ruby/ext/: rb_photon.h
Aerosol/ext/Photon/src/: VectorMath.h  photon.h  photon_drawspace.c
Aerosol/ruby/: aerosol.rb  canvas.rb  chipmunk_object.rb  photon.rb  photon_texture.rb  resourcecache.rb  timer.rb
Aerosol/ruby/events/: events.rb  input_pad.rb
Aerosol/src/: AS.h  AS_event.c  AS_main.c  AS_util.c  main.c  oggstreamer.h  rbogl.c
CrayonBall/gfx/: font.metrics
CrayonBall/src/: as_extras.rb  balls.rb  gameprefs.rb  highscores.rb  init.rb  load.rb  load_classes.rb  load_screen.rb  main.rb  menu.rb  mouse.rb  score.rb  stats.rb
CrayonBall/src/gamestates/: classic_gamestate.rb  gameoverstate.rb  how_to_play_state.rb  menustate.rb  newgamestate.rb  optionsstate.rb  shared_gamestate.rb
data/: com.howlingmoonsoftware.CrayonBall.desktop  com.howlingmoonsoftware.CrayonBall.metainfo.xml
ext/Chipmunk/: CMakeLists.txt
ext/Chipmunk/ruby/: Makefile
ext/Photon/ruby/: photon_font.rb
ext/Photon/ruby/ext/: rb_photon.c  rb_photon_chipmunk.c
ext/Photon/src/: VectorMath.c  photon.c  photon_chipmunk.c  photon_chipmunk.h  photon_matrix.h
gfx/: Thumbs.db  font_outline.metrics
ruby/: badge.rb  balls.rb  chipmunk_object.rb  effects.rb  execute.rb  gameprefs.rb  gamestate.rb  graph.rb  image.rb  load.rb  load_classes.rb  main.rb  menubackground.rb  misc.rb  music.rb  photon_font.rb  sound_mixer.rb  thememanager.rb
ruby/deprecated/: as_sound.rb
ruby/events/: events.rb  stringinput.rb
ruby/gamestates/: basestates.rb  drop_gamestate.rb  gameover_nag_state.rb  grab_gamestate.rb  highscoregamestate.rb  optionsstate.rb  overflow_gamestate.rb  pause_gamestate.rb  shared_gamestate.rb  statsgamestate.rb  theme_picker_state.rb
src/: AS_event.c  AS_main.c  AS_music.c  crayonball.c  ogl.c  ruby_extras.c
